[package]
name = "elayer"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.23.0"
strum_macros = "0.23.1"
ansi_term = "0.12.0"
serde_json = { version = "1.0.78", default-features = false, features = ["alloc"] }
serde = {version ="1.0.135", features = ["derive"]}
clap = { version = "3.0.10", features = ["derive"] }
rocket = "0.4.10"
futures = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.12.0", features = ["full"] }
itertools = "0.10.3"
prettytable-rs = "^0.8"
